--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <input name="say" id="say" placeholder="Username">
               </div>
               <div>
-                <input name="to" placeholder="Password">
+                <input name="to" type="password" placeholder="Password">
               </div>
               <div>
                 <button>Log in</button>
